[package]
name = "program-hello"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.3"
solana-program = "1.14.7"

[dev-dependencies]
solana-program-test = "1.14.7"
solana-sdk = "1.14.7"

[lib]
name = "program_hello"
crate-type = ["cdylib", "lib"]